--- a/templates/_layouts/docs_discourse.html
+++ b/templates/_layouts/docs_discourse.html
@@ -4,6 +4,23 @@
 
 {% block content %}
 <h1>{{ document.title }}</h1>
+
+{%if show_documentation_menu %}
+  <nav class="p-tabs" aria-label="{{slug}} documentation menu">
+    <ul class="p-tabs__list">
+      <li class="p-tabs__item">
+        <a href="/design/{{ slug }}" class="p-tabs__link" {% if "/design/" in path %}aria-selected="true"{% endif %}>Design guidelines</a>
+      </li>
+      <li class="p-tabs__item">
+          <a href="/docs/{{ slug }}" class="p-tabs__link" {% if "/docs/" in path %}aria-selected="true"{% endif %}>Implementation</a>
+      </li>
+      <li class="p-tabs__item">
+        <a href="/docs/{{ slug }}/accessibility" class="p-tabs__link" {% if "/accessibility" in path %}aria-selected="true"{% endif %}>Accessibility</a>
+      </li>
+    </ul>
+  </nav>
+{%endif%}
+
 {{ document.body_html | safe }}
 <hr />
 <p><em>Last updated {{ document.updated }}.</em></p>
